fix cropping

--- a/src/dashboard.scss
+++ b/src/dashboard.scss
@@ -6,6 +6,7 @@
   height: calc(100vh - 110px);
   overflow-x: auto;
   overflow-y: hidden;
+  margin-right: 15px;
 
   .main-container__schedule {
     display: flex;
